projects/usha-residency/css/style.css
/* ... */
.bg-red a.read-more{font-size:17px;color:#fff;background:#1b263b;padding:13px 28px;display:inline-block;position:relative}
a.read-more{font-size:17px;color:#fff;background:#bfa15f;padding:13px 28px;display:inline-block;position:relative;opacity:.9;border-radius:2px}
.bg-red a.read-more{background:#1b263b}
.bg-red a.read-more .button a.read-more:after{content:"";position:absolute;left:5px;right:5px;top:5px;bottom:5px;border:1px solid #000}
.button a.read-more:after{content:"";position:absolute;left:5px;right:5px;top:5px;bottom:5px;border:1px solid #fff}
.fa .button a.read-more:after{content:"";position:absolute;left:5px;right:5px;top:5px;bottom:5px;border:1px solid #000!important}
.bg-blue .item ul{width:100%!important}
ul.listing li{font-size:18px;font-weight:300;position:relative;padding-left:20px;line-height:1;margin-bottom:10px}
ul.listing li:before{content:"";width:14px;height:14px;background:#057c8c;position:absolute;left:0;top:2px;border-radius:50%;border:1px solid #fff}
ul.listing li:after{content:"";width:10px;height:10px;background:#fff;position:absolute;left:2px;top:4px;border-radius:50%}
div#amenities-carousel ul.listing li{color:#fff;font-size:16px;line-height:19px}
div#amenities-carousel{margin:15px 0 -7px 0;padding:0}
#amenities .row{margin:0}
#amenities p{text-align:center}
.box-main{width:30.6%;float:left;background-color:#fff;border:8px solid #d5cac4;margin:12px 15px;padding:10px 15px;min-height:380px}
.box-img{width:100%;float:left;text-align:center}
.box-text{width:100%;float:left;padding:10px 0 3px 0;text-align:center}
.box-text h4{font-weight:600;font-size:22px;text-transform:none;margin:0 0 5px 0}
.box-text p{color:#000;margin:0!important}
.bg-blue .full-width-bx .main-icons{width:46%;margin:20px}
.bg-blue .full-width-bx .main-icons .icons-bx{width:28%;margin:15px 0}
.bg-blue .full-width-bx .main-icons .icons-text{width:70%;text-align:left;color:#fff}
.bg-blue .full-width-bx .main-icons .icons-text b{color:#fff;margin:4px 0;display:block}
.bg-blue .full-width-bx .main-icons .icons-bx img{width:80%}
.full-width-bx{width:100%;float:left;height:auto;margin:0 0 10px 0;text-align:center}
.full-width-bx img{border:4px solid #fff}
.text-box ul li{text-align:left;color:#000;float:left}
.ul-li b{float:left}
.full-main-bx .text-box b{text-align:left}
.amenit-box-right ul{background-color:none;margin:0}
.floor-plan-img img{border:4px solid #bfa15f;width:100%}
.main-bx-icons{width:100%;float:left;padding:0}
.box-main-big{width:13%;float:left;text-align:center;font-size:15px;padding:5px;margin:9px 7px;min-height:130px;line-height:18px}
.box-main-img{width:100%;float:left}
.box-main-img img{width:85%}
.image img{border:4px solid #fff}
.image *{width:100%}
.image{margin-bottom:30px}
.main-icons{width:14.6%;float:left;height:auto;margin:0 11px}
.icons-bx{width:100%;float:left;margin:15px 0;height:auto}
.icons-bx img{border:0;width:65%}
.icons-text{width:100%;float:left;color:#000;height:auto;line-height:20px;font-size:15px}
.icons-text b{font-size:19px;font-weight:600;color:#000}
.icon-main{width:100%;float:left;margin:0 auto;display:revert}
.icon-mains{width:100%;float:left;margin:30px auto 0 auto;display:revert}
.icon-main-bx{width:32%;float:left;color:#fff;margin:5px;font-size:15px;padding:5px;text-align:center}
.icon-img-bx{width:60%;margin:auto}
.icon-main-text{font-size:15px;padding:15px 0;line-height:20px;color:#000}
.collapse,.collapsing{padding:10px 40px!important;-webkit-transition-property:height,visibility;transition-property:height,visibility;-webkit-transition-timing-function:ease;transition-timing-function:ease}
.collapsing{padding:10px 40px!important}
.collapse.show{padding:10px 40px;max-height:195px;overflow-y:scroll}
section#location{height:490px;width:100%}
.contact-map{float:left;width:57%}
#location .form_wrap{float:left;width:43%;height:490px}
#location .form-group label{margin-bottom:10px}
#location form#enquiry-form .form-group input[type=submit]{margin:20px 0 0 0}
section#vidoe-bx{background-color:#194484;text-align:center}
.vidoe-bx{text-align:center;width:100%;margin:0}
.vidoe-bx iframe{width:65%;height:450px}
.contact-map iframe{width:100%;height:490px}
.contact-block{text-align:center;position:relative;min-height:222px;margin-bottom:0}
#contact .contact-block{margin:15px 0 0 0}
#contact .button{margin:20px 0 0 0}
ul.listing li{font-size:17px;line-height:27px}
.contact-text h3{font-size:24px;font-weight:500;text-transform:uppercase;color:#fff;margin-top:10px;margin-bottom:8px}
.contact-text p{color:#fff}
.contact-block:after{content:"";width:1px;height:100%;position:absolute;right:-16px;background:#fff;top:0}
.code-box img {
  width: 32%;
}
div#footer{text-align:center;padding:20px 0;margin-bottom:0;background:#fff;height:auto}
div#footer p{font-size:10px;font-weight:400;text-align:left}
div#footer p a:link{color:#e80c0c}

.container-form a{color:#e87c07}
.copyright p{font-size:18px;text-transform:uppercase;font-weight:400;color:#000;margin-bottom:20px}
.carousel-item{min-height:auto;background-size:cover!important}
section#intro{padding:85px 0 0 0}
.owl-dots .owl-dot{width:25px;height:25px;border:1px solid #fff!important;margin:0 4px;border-radius:50%}
.owl-dots{width:100%;text-align:center;z-index:99;position:relative}
.owl-dots .owl-dot.active{background:#fff}
div#floor-plan-carousel .owl-dots .owl-dot,div#gallery-carousel .owl-dots .owl-dot{border-color:#000!important;background:#fff}
div#floor-plan-carousel .owl-dots .owl-dot.active,div#gallery-carousel .owl-dots .owl-dot.active{background:#000}
.floor-plan-img{margin-bottom:30px}
/* ... */

